--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
         <h2>Cappuccino, $2.35</h2>
         <p>A mixture of espresso, steamed milk and foam.</p>
 
-        <h2>Chai Tea, 1.85</h2>
+        <h2 id="chai">Chai Tea, 1.85</h2>
         <p>A spicy drink made with black tea, spices,
             milk and honey. </p>
            <a href="message.html">Message from Japheth</a>
             <br>
-            <a href="mission.html">Our Mission</a>
+            <a href="mission.html">Read more about Starbuzz Coffee’s important mission</a> 
+            <a target="_blank" href="http://wickedlysmart.com/buzz"
+title="Read all about caffeine on the Buzz">Caffeine Buzz</a>
+
 </body>
 </html>
